--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
         </div>
     </nav>
 
+    <div id="tophome" class="splash">
+      <div class="container">
+        <div class="col-lg-12">
+          <img class="img-responsive center-block" src="./img/logo.png" alt="presentation">
+          <h1>Contribute with your ideas, your skills or make donation to build powerfull application</h1>
+          <p class="lead">Product software is an art, requires a high level of engineering skills and artistic imagination.<br> We believe in quality and community for a better user experience</p>
+        </div>
+      </div>
+    </div>
+
     <div class="section section-information">
       <div class="container">
           <div class="row">
@@ -66,16 +76,6 @@
               <p>Kunzisoft is currently in construction but you can already collaborate and submit your ideas.</p>
             </div>
           </div>
-      </div>
-    </div>
-
-    <div id="tophome" class="splash">
-      <div class="container">
-        <div class="col-lg-12">
-          <img class="img-responsive center-block" src="./img/logo.png" alt="presentation">
-          <h1>Contribute with your ideas, your skills or make donation to build powerfull application</h1>
-          <p class="lead">Product software is an art, requires a high level of engineering skills and artistic imagination.<br> We believe in quality and community for a better user experience</p>
-        </div>
       </div>
     </div>
 
@@ -139,7 +139,7 @@
           <div class="row">
             <div class="col-lg-12">
               <h1><i class="fa fa-paypal"></i>Donation</h1>
-              <p class="lead">Whant to support your favorite project, make a donation : </p>
+              <p class="lead">Whant to support your favorite software project, make a donation and become a kunzite : </p>
               <button class="btn btn-default" title="Donate" disabled>Donate (Coming soon)</button>
             </div>
           </div>
