--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                         <a class="scrollTo" href="#donate">Donate</a>
                     </li>
                     <li>
-                        <a class="scrollTo" href="mailto:contact@kunzisoft.com">Contact</a>
+                        <a class="external-link" href="https://kunzisoft.blogspot.com/">Blog</a>
+                    </li>
+                    <li>
+                        <a class="external-link" href="mailto:contact@kunzisoft.com">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -116,7 +119,7 @@
             <div class="col-lg-12">
               <h1><i class="fa fa-comment"></i>Submit ideas and features</h1>
               <p class="lead">The idea is here, you want to create your application but you do not have the knowledge or resources required. Ask the community for create your own project : </p>
-              <a class="btn btn-info" target="_blank" href="mailto:contact@kunzisoft.com" title="Ask community">Submit features</a>
+              <a class="btn btn-info" target="_blank" href="https://kunzisoft.blogspot.com/" title="Ask community">Submit features</a>
             </div>
           </div>
       </div>
