--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="./img/favicon.ico" />
     <title>Kunzisoft</title>
 
     <!-- Latest compiled and minified CSS -->
