Resolve duplicate id

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
       </div>
 
-      <div id="donate" class="section section-love">
+      <div id="love" class="section section-love">
         <div class="container">
             <h2>We also love</h2>
 
