Change splash background, text, and color

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       <div class="container">
         <div class="col-lg-6">
           <img class="img-responsive center-block" src="./img/logo.png" alt="presentation">
-          <h1>Contribute with your ideas, your skills or donate to build your powerful software</h1>
-          <p class="lead">We believe in quality and community for a better user experience</p>
+          <h1>Contribute to build your powerful software</h1>
+          <p class="lead">We believe in quality and community for a better user experience. Contribute with your ideas, your skills or donate for love.</p>
         </div>
         <div class="col-lg-8 splash-form">
           <h2 class="email-title">Stay informed !</h2>
