Solve bug of wrong char in subscription link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             var waitImage = './img/ajax-loader.gif'
           </script>
           <div id="phplistsubscriberesult"></div>
-          <form action="https://kunzisoft.hosted.phplist.com/lists/?p=subscribe&id=1" method="post" id="phplistsubscribeform">
+          <form action="https://kunzisoft.hosted.phplist.com/lists/?p=subscribe&amp;id=1" method="post" id="phplistsubscribeform">
             <input type="text" name="email" value="" id="emailaddress" />
             <button class="btn btn-default" type="submit" id="phplistsubscribe">Subscribe</button>
           </form>
