--- a/index_fr.html
+++ b/index_fr.html
@@ -125,7 +125,7 @@
             <p>Nous créons des <strong>logiciels fonctionnels, réutilisables, magnifiques et ergonomiques</strong>. Traduction, documentation, marketing, tous les métiers peuvent ajouter leurs compétences à l'édifice.</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-            <h3><i class="fa fa-graduation-cap"></i> Learn and build</h3>
+            <h3><i class="fa fa-graduation-cap"></i> Apprendre et enseigner</h3>
              <p>Envie d'enseigner, de disséminer des connaissances et de l'expériences? Vous êtes un développeur, un graphiste, un chef de projet... <strong>Augmentez vos compétences</strong> et apprenez les meilleures pratiques avec des professionnels.</p>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
